docs: update version history to 0.1.5
- Add version 0.1.5 changelog
- Fix Admin backend Lombok annotation processor configuration
- Fix Admin frontend missing RoleFormDialog.vue component
- Fix B2C frontend TypeScript compatibility issues
- Fix Application backend Maven Wrapper missing files
- Add JDK 21 LTS compatibility
- Update README.md with Admin directory info
- Add user-guide.md documentation
- Update repository URLs to Stanlyjin54/Crestue-OmniBOP